--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -13,37 +13,38 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{你的大名}
+\name{韦文修}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+  \email{845265098wwx@gmail.com} \textperiodcentered\ 
+  \phone{(+86) 188-1636-9206} \textperiodcentered\ 
  
 \section{\faGraduationCap\  教育背景}
-\datedsubsection{\textbf{上海交通大学}, 上海}{2013 -- 至今}
-\textit{在读硕士研究生}\ 信息与通信工程, 预计 2016 年 3 月毕业
-\datedsubsection{\textbf{西安电子科技大学}, 西安, 陕西}{2009 -- 2013}
-\textit{学士}\ 通信工程
+\datedsubsection{\textbf{伊利诺伊大学香槟分校}}{2023 -- 至今}
+\textit{在读硕士研究生}\ 计算机科学, 预计 2025 年 6 月毕业
+\datedsubsection{\textbf{俄亥俄州立大学}}{2019 -- 2023}
+\textit{学士}\ 计算机工程
 
-\section{\faUsers\ 实习/项目经历}
-\datedsubsection{\textbf{黑科技公司} 上海}{2015年3月 -- 2015年5月}
-\role{实习}{经理: 高富帅}
-xxx后端开发
+\section{\faUsers\ 实习经历}
+\datedsubsection{\textbf{中科雨辰科技有限公司} 北京}{2024年5月 -- 至今}
+\role{实习}{java后端开发}
 \begin{itemize}
-  \item 实现了 xxx 特性
-  \item 后台资源占用率减少8\%
-  \item xxx
+  \item 使用Spring Boot, Spring Bash, Mybatis Plus完成了从数据源到产品服务端的同步与新数据的CRUD
+  \item 定义了前端对数据的Query规范并实现了前端请求到MySQL query的解析，并撰写文档与前端对接
+  \item 使用Mongo, MongoTemplet等功能实现了产品与MongoDB的整合
+  \item 通过Maven 完成了部分功能到其他项目的迁移舒适配
 \end{itemize}
 
-\datedsubsection{\textbf{分布式科学上网姿势}}{2014年6月 -- 至今}
-\role{Golang, Linux}{个人项目，和富帅糕合作开发}
+
+\section{\faUsers\ 项目经历}
+\datedsubsection{\textbf{云帆中文学习词典}}{2024年6月 -- 至今}
+\role{Node.js, tyepscript, MongoDB}{个人项目，和\href{https://github.com/ColumbusK/}{ColumbusK}合作开发}
 \begin{onehalfspacing}
-分布式负载均衡科学上网姿势, https://github.com/cyfdecyf/cow
+帮助外国人学习中文的词典安卓应用, 计划上架google play, https://github.com/cyfdecyf/cow
 \begin{itemize}
-  \item 修复了连接未正常关闭导致文件描述符耗尽的 bug
-  \item 使用Chord 哈希 URL, 实现稳定可靠地分流
-  \item xxx (尽量使用量化的客观结果)
+  \item 使用Node.js与Express框架服务搭建，并设计词典所需的MongoDB schema
+  \item 通过Mongoose等功能达成了同一词汇的跨集合查询与合并
+  \item 设计并实现了通过SMTP的用户验证注册登录系统
 \end{itemize}
 \end{onehalfspacing}
 
